--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "back-end",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +20,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "prisma": "^5.17.0"
   }
 }
